# -portfolio_pdf_compressor

./: .gitignore  Dockerfile  PLANNING.md  PROGRESS.md  PROJECT_BRIEF_v4.md  README.md  pyproject.toml
.claude/: settings.local.json
server/: __init__.py  jobs.py  main.py  ratelimit.py  routes.py
src/compressor/: __init__.py  __main__.py  classifier.py  cli.py  config.py  exceptions.py  pdf_io.py  pipeline.py  schemas.py  strategy_v1.py  strategy_v2.py
tests/: conftest.py  test_classifier.py  test_pdf_io.py  test_pipeline.py  test_server.py  test_strategy_v1.py  test_strategy_v2.py
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: ProgressBar.tsx  ThumbnailGrid.tsx  UploadZone.tsx
