[project]
name = "portfolio-compressor"
version = "0.1.0"
description = "Smart PDF portfolio compressor: hit a hard size target with maximum visual quality."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.26",
    "opencv-python-headless>=4.10",
    "pillow>=10.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"
